--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main class="container-fluid">
-      <div class="row d-flex align-items-center justify-content-between">
+      <div class="row d-flex align-items-center justify-content-center">
           <!--
           <article class="col-md-4 country">
             <img class="img-fluid" src="" />
